src/objects/seoReporting__c.object
<CustomObject>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Report_Day__c</fullName>
        <label>Report Day</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Frequency__c</fullName>
        <label>Report Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>body__c</fullName>
        <label>body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>signature__c</fullName>
        <label>signature</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>seoReporting</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>seoReporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>